--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <li><a href="#meningitidis">Meningitidis</a></li>
     </ul>
   </div>
-<a><img id="img" src="/images/hospital.jpeg"></a>
+<a><img id="img" src="./images/hospital.jpeg"></a>
 </nav>
 
 <main>
@@ -50,11 +50,11 @@
         <p>Specific break downs of all the cases (including sites, departments, 
             and dates, will be found below.</p>
 
-    <img id="germ" src="/images/germ.jpeg">
+    <img id="germ" src="./images/germ.jpeg">
 
 </aside>
 <article>
-    <img id="graph" src="/images/Graph.png">
+    <img id="graph" src="./images/Graph.png">
 </article>
 
 <section class="diseases">
